github/ci/prow-deploy/kustom/overlays/kubevirtci-testing/patches/StrategicMerge/deck_deployment_replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deck
spec:
  replicas: 1
