github/ci/prow-deploy/kustom/overlays/kubevirtci-testing/patches/StrategicMerge/docker-mirror_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-mirror
spec:
  template:
    spec:
      volumes:
        - name: storage
          hostPath:
            path: /var/lib/docker-mirror/kubernetes-prow
