github/ci/prow-deploy/kustom/overlays/kubevirtci-testing/patches/StrategicMerge/greenhouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greenhouse
spec:
  template:
    spec:
      nodeSelector:
        type: vm
        zone: ci
      volumes:
        - name: cache
          hostPath:
            path: /var/lib/greenhouse/kubernetes-prow
