github/ci/prow-deploy/kustom/overlays/kubevirtci-testing/patches/StrategicMerge/gcsweb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcsweb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: gcsweb.prowdeploy.ci
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gcsweb
            port:
              number: 80
  tls:
  - hosts:
    - gcsweb.prowdeploy.ci
