github/ci/prow-deploy/kustom/overlays/kubevirtci-testing/patches/StrategicMerge/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hook
spec:
  ingressClassName: nginx
  rules:
  - host: hook.prowdeploy.ci
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hook
            port:
              number: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deck
  annotations:
    nginx.ingress.kubernetes.io/app-root: ""
spec:
  ingressClassName: nginx
  rules:
  - host: deck.prowdeploy.ci
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deck
            port:
              number: 80
  tls:
  - hosts:
    - deck.prowdeploy.ci
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcsweb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
  - host: gcsweb.prowdeploy.ci
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gcsweb
            port:
              number: 80
  tls:
  - hosts:
    - gcsweb.prowdeploy.ci
