github/ci/prow-deploy/kustom/overlays/kubevirtci-testing/patches/StrategicMerge/prow-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prow
  annotations:
    nginx.ingress.kubernetes.io/app-root: ""
spec:
  ingressClassName: nginx
  rules:
  - host: prow.prowdeploy.ci
    http:
      paths:
      - path: /hook
        pathType: Prefix
        backend:
          service:
            name: hook
            port:
              number: 8888
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deck
            port:
              number: 80
  tls:
  - hosts:
    - prow.prowdeploy.ci
